# Vista

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.svelte  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  image_protocol.rs  lib.rs  main.rs
src-tauri/src/hitomi/: client.rs  config.rs  gg.rs  http.rs  image_cache.rs  mod.rs  models.rs  nozomi.rs  search.rs  url_gen.rs
src/components/: DownloadsPanel.svelte  GalleryCard.svelte  GalleryGrid.svelte  Header.svelte  Icon.svelte  Pager.svelte  Reader.svelte  SettingsDialog.svelte  Sidebar.svelte  Spinner.svelte  ToastHost.svelte  Toolbar.svelte  UpdateBanner.svelte
src/lib/: api.ts  download-store.svelte.ts  errors.ts  focus-trap.ts  format.ts  gallery-store.svelte.ts  library-store.svelte.ts  reader-store.svelte.ts  search-history-store.svelte.ts  settings-store.svelte.ts  types.ts  ui-store.svelte.ts  update-store.svelte.ts
