[package]
name = "vista"
version = "0.2.7"
description = "Vista - a cross-platform gallery client"
authors = ["nyattic"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vista_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# rustls-tls keeps the build self-contained across Windows/macOS/Linux (no system OpenSSL).
reqwest = { version = "0.13.4", default-features = false, features = [
  "rustls",
  "gzip",
  "brotli",
  "deflate",
  "json",
  "stream",
  "charset",
  "http2",
] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3.32"

rusqlite = { version = "0.40.0", features = ["bundled"] }

regex = "1.12.3"
once_cell = "1.21"
thiserror = "2.0.18"
log = "0.4"
urlencoding = "2.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
